stored first user mock data onto the database

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tinder backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/app.js"
   },
   "keywords": [
     "nodejs",
@@ -13,6 +13,8 @@
   "author": "Kaushal Kishore",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.18.0",
+    "nodemon": "^1.3.6"
   }
 }
