--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Kaushal Kishore",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
-    "nodemon": "^1.3.6"
+    "nodemon": "^1.3.6",
+    "validator": "^13.15.15"
   }
 }
