--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Tinder backend",
   "main": "index.js",
   "scripts": {
+    "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
   "keywords": [
