--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Kaushal Kishore",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.895.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
