--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
+    "node-cron": "^4.2.1",
     "nodemon": "^1.3.6",
+    "razorpay": "^2.9.6",
     "validator": "^13.15.15"
   }
 }
