--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-cron": "^4.2.1",
     "nodemon": "^1.3.6",
     "razorpay": "^2.9.6",
+    "socket.io": "^4.8.1",
     "validator": "^13.15.15"
   }
 }
